--- a/its-camera-ai/pyproject.toml
+++ b/its-camera-ai/pyproject.toml
@@ -29,8 +29,12 @@ dependencies = [
     # Async & Concurrency
     "asyncio-mqtt>=0.16.2",
     "aioredis>=2.0.1",
-    "aiokafka>=0.12.0",
     "httpx>=0.28.1",
+    # gRPC & Protocol Buffers
+    "grpcio>=1.68.1",
+    "grpcio-tools>=1.68.1",
+    "protobuf>=5.29.5",
+    "grpcio-status>=1.68.1",
     # Computer Vision & ML
     "torch>=2.8.0",
     "torchvision>=0.23.0",
@@ -70,6 +74,7 @@ dependencies = [
     "sentry-sdk[fastapi]>=2.34.1",
     "onnx>=1.18.0",
     "onnxruntime>=1.22.1",
+    "dependency-injector>=4.48.1",
 ]
 
 [dependency-groups]
@@ -79,7 +84,6 @@ dev = [
     "ruff>=0.12.8",
     "black>=25.1.0",
     "isort>=6.0.1",
-    
     # Testing
     "pytest>=8.4.1",
     "pytest-asyncio>=1.1.0",
@@ -87,23 +91,21 @@ dev = [
     "pytest-mock>=3.14.1",
     "pytest-benchmark>=5.1.0",
     "hypothesis>=6.137.2",
-    
     # Development Tools
     "pre-commit>=4.3.0",
     "bandit[toml]>=1.8.6",
     "safety>=3.6.0",
     "pip-audit>=2.9.0",
-    
     # Documentation
     "sphinx>=8.2.3",
     "sphinx-rtd-theme>=3.0.2",
     "myst-parser>=4.0.1",
-    
     # Type Stubs
     "types-passlib>=1.7.7.20250602",
     "types-redis>=4.6.0.20241004",
     "types-pillow>=10.2.0.20240822",
     "types-setuptools>=80.9.0.20250809",
+    "radon>=6.0.1",
 ]
 
 ml = [
