Refactor code structure for improved readability and maintainability

--- a/its-camera-ai/.env.example
+++ b/its-camera-ai/.env.example
@@ -44,12 +44,48 @@ KAFKA_BOOTSTRAP_SERVERS=localhost:9092
 KAFKA_CONSUMER_GROUP=its-camera-ai
 KAFKA_AUTO_OFFSET_RESET=latest
 
-# MinIO/S3 Configuration
+# MinIO Object Storage Configuration
 MINIO_ENDPOINT=localhost:9000
 MINIO_ACCESS_KEY=minioadmin
 MINIO_SECRET_KEY=minioadmin123
 MINIO_SECURE=false
-MINIO_BUCKET_NAME=its-camera-ai
+MINIO_REGION=us-east-1
+
+# MinIO Bucket Configuration
+MINIO_DEFAULT_BUCKET=its-camera-ai
+MINIO_MODELS_BUCKET=its-models
+MINIO_VIDEO_BUCKET=its-video
+MINIO_LOGS_BUCKET=its-logs
+MINIO_CREATE_BUCKETS=true
+
+# MinIO Upload/Download Settings
+MINIO_MULTIPART_THRESHOLD=67108864  # 64MB in bytes
+MINIO_MULTIPART_CHUNKSIZE=16777216  # 16MB in bytes
+MINIO_MAX_CONCURRENT_UPLOADS=4
+MINIO_CONNECTION_TIMEOUT=60
+MINIO_READ_TIMEOUT=300
+
+# MinIO Performance and Caching
+MINIO_ENABLE_CACHING=true
+MINIO_CACHE_TTL=3600
+MINIO_CACHE_MAX_SIZE=1000
+MINIO_MAX_POOL_CONNECTIONS=20
+
+# MinIO Security and Features
+MINIO_ENABLE_VERSIONING=true
+MINIO_ENABLE_ENCRYPTION=true
+MINIO_ENABLE_COMPRESSION=true
+MINIO_COMPRESSION_LEVEL=6
+
+# MinIO Lifecycle Management
+MINIO_ENABLE_LIFECYCLE=true
+MINIO_VIDEO_RETENTION_DAYS=30
+MINIO_MODEL_RETENTION_DAYS=365
+MINIO_LOG_RETENTION_DAYS=90
+
+# MinIO Monitoring
+MINIO_ENABLE_METRICS=true
+MINIO_METRICS_INTERVAL=60
 
 # ML Model Configuration
 MODEL_REGISTRY_PATH=./models
