--- a/its-camera-ai/pyproject.toml
+++ b/its-camera-ai/pyproject.toml
@@ -106,6 +106,9 @@ dev = [
     "types-pillow>=10.2.0.20240822",
     "types-setuptools>=80.9.0.20250809",
     "radon>=6.0.1",
+    "types-pyyaml>=6.0.12.20250809",
+    "types-protobuf>=6.30.2.20250809",
+    "grpc-stubs>=1.53.0.6",
 ]
 
 ml = [
@@ -280,6 +283,9 @@ warn_no_return = true
 warn_unreachable = true
 strict_equality = true
 extra_checks = true
+exclude = [
+    "src/its_camera_ai/proto/.*_pb2.*\\.py$",
+]
 
 [[tool.mypy.overrides]]
 module = [
