--- a/its-camera-ai/pyproject.toml
+++ b/its-camera-ai/pyproject.toml
@@ -67,6 +67,7 @@ dependencies = [
     "python-dotenv>=1.1.1",
     "structlog>=25.4.0",
     "rich>=14.1.0",
+    "typer>=0.15.1",
     # Monitoring & Observability
     "opentelemetry-api>=1.36.0",
     "opentelemetry-sdk>=1.36.0",
@@ -176,7 +177,7 @@ inference = [
 ]
 
 [project.scripts]
-its-camera-ai = "its_camera_ai.cli:main"
+its-camera-ai = "its_camera_ai.cli.main:app"
 
 [project.urls]
 Homepage = "https://github.com/your-org/its-camera-ai"
