--- a/its-camera-ai/pyproject.toml
+++ b/its-camera-ai/pyproject.toml
@@ -68,6 +68,16 @@ dependencies = [
     "structlog>=25.4.0",
     "rich>=14.1.0",
     "typer>=0.15.1",
+    # Enhanced CLI dependencies
+    "inquirer>=3.4.0",
+    "click-completion>=0.5.2",
+    "click-aliases>=1.0.4",
+    "pygments>=2.18.0",
+    "tabulate>=0.9.0",
+    "psutil>=6.1.0",
+    "click-repl>=0.3.0",
+    "colorama>=0.4.6",
+    "packaging>=24.2",
     # Monitoring & Observability
     "opentelemetry-api>=1.36.0",
     "opentelemetry-sdk>=1.36.0",
@@ -76,6 +86,8 @@ dependencies = [
     "onnx>=1.18.0",
     "onnxruntime>=1.22.1",
     "dependency-injector>=4.48.1",
+    "alembic>=1.16.4",
+    "psycopg2-binary>=2.9.10",
 ]
 
 [dependency-groups]
