Refactor code structure for improved readability and maintainability

--- a/its-camera-ai/.env.example
+++ b/its-camera-ai/.env.example
@@ -34,10 +34,10 @@ REDIS_POOL_SIZE=10
 REDIS_SOCKET_TIMEOUT=5
 
 # InfluxDB Configuration
-INFLUXDB_URL=http://localhost:8086
-INFLUXDB_TOKEN=admin-token-12345
-INFLUXDB_ORG=its-camera-ai
-INFLUXDB_BUCKET=metrics
+TIMESCALEDB_URL=http://localhost:8086
+TIMESCALEDB_TOKEN=admin-token-12345
+TIMESCALEDB_ORG=its-camera-ai
+TIMESCALEDB_BUCKET=metrics
 
 # Kafka Configuration
 KAFKA_BOOTSTRAP_SERVERS=localhost:9092
