--- a/its-camera-ai/web/package.json
+++ b/its-camera-ai/web/package.json
@@ -16,10 +16,12 @@
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toast": "^1.2.14",
+    "@tabler/icons-react": "^3.34.1",
     "@tanstack/react-query": "^5.85.0",
     "@types/d3": "^7.4.3",
     "@types/react-window": "^1.8.8",
@@ -28,22 +30,27 @@
     "d3": "^7.9.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.12",
+    "jose": "^5.9.6",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
+    "next-intl": "^3.20.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-window": "^1.8.11",
     "recharts": "^3.1.2",
     "tailwind-merge": "^3.3.1",
+    "web-vitals": "^4.2.4",
+    "zod": "^3.24.1",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
+    "babel-plugin-react-compiler": "^19.1.0-rc.2",
     "concurrently": "^9.2.0",
     "cors": "^2.8.5",
     "eslint": "^9",
@@ -53,5 +60,6 @@
     "tailwindcss": "^4.1.11",
     "typescript": "^5",
     "ws": "^8.18.3"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
